# PINN

./: .gitignore  AGENTS.md  CODEX_CONTEXT.md  DATASET_REGISTRY.md  EXPERIMENT_REGISTRY.md  FIGURE_REGISTRY.md  NEXT_ACTIONS.md  PROJECT_GOAL.md  PROJECT_STATE.md  README.md  RESEARCH_LOG.md  pyproject.toml  requirements.txt
.codex/: README.md  config.toml
configs/: active_protocol_design_v3.yaml  cv_multidomain_oasis_v10.yaml  e1f_qiu_author_external_anchor.yaml  e1fr_qiu_source_equation_correction.yaml  f_sps_balanced_medium_budget_benchmark.yaml  f_sps_medium_budget_benchmark.yaml  full_pinn_architecture_v1.yaml  full_pinn_n0_cv_e_v3.yaml  full_pinn_n0_repair_v2.yaml  gamma_sub_auxiliary_observability_sweep.yaml  gamma_sub_calibrated_protocol_robustness_final.yaml  gamma_sub_calibrated_sequential_protocol_validation.yaml  gamma_sub_calibration_protocol_cost_frontier.yaml  gamma_sub_calibration_protocol_disentanglement.yaml  gamma_sub_ceba_v1.yaml  gamma_sub_constrained_inversion.yaml  gamma_sub_evidence_lock.yaml  gamma_sub_joint_inversion_boundary.yaml  gamma_sub_multi_protocol_recoverability.yaml  gamma_sub_observability_augmented.yaml  gamma_sub_protocol_actual_inversion_validation.yaml  gamma_sub_protocol_observability_design.yaml  gamma_sub_recoverability_phase_diagram.yaml  gamma_sub_response_surface_anchor_verification.yaml  gamma_sub_scis_v1.yaml  gamma_sub_sequential_protocol_design.yaml  gamma_sub_simulator_backed_sequential_protocol_validation.yaml  gamma_sub_statistical_robustness.yaml  gamma_sub_temperature_anchor_placement.yaml  (+63 more)
data/: README.md
(+983 files in other folders)
